commit translated contents

--- a/docs/visual-basic/misc/bc30252.md
+++ b/docs/visual-basic/misc/bc30252.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30252
 ms.assetid: 1a2c3278-5dd7-4a72-9dca-3f2a5bdfd04c
-ms.openlocfilehash: ed7a66627693389ca2e4dbc87bcfd8796c0ba3af
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8d3486b379ef43f93e858a95c15dac82092d83c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61768303"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359062"
 ---
 # <a name="end-interface-must-be-preceded-by-a-matching-interface"></a>'End Interface' deve essere preceduto da un oggetto 'Interface' corrispondente
 Un'istruzione `End Interface` si verifica senza un'istruzione `Interface` corrispondente. `End Interface` deve essere preceduto da un'istruzione `Interface` corrispondente.  
@@ -27,4 +27,4 @@ Un'istruzione `End Interface` si verifica senza un'istruzione `Interface` corris
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
