--- a/docs/visual-basic/misc/bc30639.md
+++ b/docs/visual-basic/misc/bc30639.md
@@ -1,5 +1,5 @@
 ---
-title: Le proprietà non possono essere dichiarate '<modifiername>'
+title: Le proprietà non possono essere dichiarate ' <modifiername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30639
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30639
 ms.assetid: 6d7005a2-b1c9-4eb4-ac77-8c7e2c802984
-ms.openlocfilehash: fd82b706efaadf706a52f9337bd92ae1c0c585b7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 738594e3538257878e543ccc6cea17047b5e2258
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646585"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415141"
 ---
-# <a name="properties-cannot-be-declared-modifiername"></a>Le proprietà non possono essere dichiarate '\<nomemodificatore >'
+# <a name="properties-cannot-be-declared-modifiername"></a>Le proprietà non possono essere dichiarate ' \<modifiername> '
 La sintassi della dichiarazione `Property` contiene un errore. Questo errore in genere si verifica quando si è specificata una parola chiave che non può essere usata in una dichiarazione `WithEvents`, ad esempio `Property` .  
   
  **ID errore:** BC30639  
@@ -25,4 +25,4 @@ La sintassi della dichiarazione `Property` contiene un errore. Questo errore in 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
