--- a/docs/visual-basic/misc/bc30649.md
+++ b/docs/visual-basic/misc/bc30649.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo non supportato"
+title: "' <typename> ' è un tipo non supportato"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30649
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30649
 ms.assetid: fc44494c-9603-42ab-9780-9d2286015180
-ms.openlocfilehash: 758f7ee576e7c023ba8bcfc941f5c20ebcee635e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4c40b165e760a64395a5357ddcb0615cfac9a8d8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646491"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415063"
 ---
-# <a name="typename-is-an-unsupported-type"></a>'\<nomeTipo >' è un tipo non supportato
+# <a name="typename-is-an-unsupported-type"></a>' \<typename> ' è un tipo non supportato
 Il tipo specificato non può essere rappresentato da Visual Studio.  
   
  **ID errore:** BC30649  
@@ -27,4 +27,4 @@ Il tipo specificato non può essere rappresentato da Visual Studio.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di dati](../../visual-basic/language-reference/data-types/index.md)
+- [Tipi di dati](../language-reference/data-types/index.md)
