--- a/docs/visual-basic/misc/bc30666.md
+++ b/docs/visual-basic/misc/bc30666.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30666
 ms.assetid: a208a6ea-0e36-4bf1-8984-4de1a0e38a2a
-ms.openlocfilehash: 17e7817c608e9c3513e0320b62f42410613f33b0
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c4ab115b01e78c245cbd9f564b50573d6e30c5e7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61666040"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414933"
 ---
 # <a name="throw-statement-cannot-omit-operand-outside-a-catch-statement-or-inside-a-finally-statement"></a>L'istruzione 'Throw' non può omettere l'operando all'esterno di un'istruzione 'Catch' o all'interno di un'istruzione 'Finally'
 Le istruzioni`Throw` di fuori dell'istruzione `Catch` devono fornire il nome di un oggetto eccezione.  
@@ -27,7 +27,7 @@ Le istruzioni`Throw` di fuori dell'istruzione `Catch` devono fornire il nome di 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Throw](../../visual-basic/language-reference/statements/throw-statement.md)
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [Istruzione throw](../language-reference/statements/throw-statement.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
 - <xref:System.Exception?displayProperty=nameWithType>
 - [Gestione e generazione di eccezioni in .NET](../../standard/exceptions/index.md)
