--- a/docs/visual-basic/misc/bc30675.md
+++ b/docs/visual-basic/misc/bc30675.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30675
 ms.assetid: bf687e99-1503-45fe-ad70-ad622ee7746e
-ms.openlocfilehash: bb0363c765c6c06345fc8236d6f4efede36e3b03
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6a0eb59890fb41f25ddf8ac2f1a8094de19e8a93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657950"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414855"
 ---
 # <a name="synclock-statement-must-end-with-a-matching-end-synclock"></a>L'istruzione 'SyncLock' deve terminare con un oggetto 'End SyncLock' corrispondente
-I blocchi`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .  
+`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .  
   
  **ID errore:** BC30675  
   
@@ -25,4 +25,4 @@ I blocchi`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione SyncLock](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [Istruzione SyncLock](../language-reference/statements/synclock-statement.md)
