--- a/docs/visual-basic/misc/bc30695.md
+++ b/docs/visual-basic/misc/bc30695.md
@@ -1,5 +1,5 @@
 ---
-title: <typename> '<membername>' deve essere dichiarato 'Shadows' perché un altro membro con questo nome è dichiarato come 'Shadows'
+title: <typename>' <membername> ' deve essere dichiarato come ' Shadows ' perché un altro membro con lo stesso nome è dichiarato come ' Shadows '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30695
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30695
 ms.assetid: 9bbef69f-e7b9-4952-bbdf-c66c891f9067
-ms.openlocfilehash: 00724e0806f6e7959e1d714236309fe1f0c3e0d5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 691818c33f33e24ebe3ebff6b00b828cb772d0d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646356"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412689"
 ---
-# <a name="typename-membername-must-be-declared-shadows-because-another-member-with-this-name-is-declared-shadows"></a>\<Nome tipo > '\<nomeMembro >' deve essere dichiarato 'Shadows' perché un altro membro con questo nome è dichiarato come 'Shadows'
+# <a name="typename-membername-must-be-declared-shadows-because-another-member-with-this-name-is-declared-shadows"></a>\<typename>' \<membername> ' deve essere dichiarato come ' Shadows ' perché un altro membro con lo stesso nome è dichiarato come ' Shadows '
 La proprietà o la routine ha lo stesso nome di un'altra proprietà o una routine contrassegnata con il modificatore `Shadows` .  
   
  **ID errore:** BC30695  
@@ -25,4 +25,4 @@ La proprietà o la routine ha lo stesso nome di un'altra proprietà o una routin
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
