--- a/docs/visual-basic/misc/bc30753.md
+++ b/docs/visual-basic/misc/bc30753.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non consente conversioni implicite da'<type1>' a'<type2>'. il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework
+title: Option Strict On non consente conversioni implicite da '<type1>' a '<type2>'. Il tipo raccolta di Visual Basic 6.0 non è compatibile con il tipo raccolta di .NET Framework
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30753
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30753
 ms.assetid: 7e1bb22e-a507-483e-bfd6-f3a43e24a232
-ms.openlocfilehash: 2fd2c9bff6519a351af007008638c5071e664922
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 0b94f4da1184a3b959bd6155281d3014c405849a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667072"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412559"
 ---
-# <a name="option-strict-on-disallows-implicit-conversions-from-type1-to-type2-the-visual-basic-60-collection-type-is-not-compatible-with-the-net-framework-collection-type"></a>Option Strict On non consente conversioni implicite da'\<tipo1 >' a'\<tipo2 >'; il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework
-`Option Strict On`non consente le conversioni implicite da'`<type1>`' a'`<type2>`'. il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework.
+# <a name="option-strict-on-disallows-implicit-conversions-from-type1-to-type2-the-visual-basic-60-collection-type-is-not-compatible-with-the-net-framework-collection-type"></a>Option Strict On non consente conversioni implicite da '\<type1>' a '\<type2>'. Il tipo raccolta di Visual Basic 6.0 non è compatibile con il tipo raccolta di .NET Framework
+`Option Strict On`non consente le conversioni implicite da' `<type1>` ' a' `<type2>` '. il tipo di raccolta Visual Basic 6,0 non è compatibile con il tipo di raccolta .NET Framework.
 
  L'oggetto raccolta usato in Visual Basic 6,0 differisce dall'oggetto raccolta usato in Visual Studio 2012.
 
@@ -23,12 +23,12 @@ ms.locfileid: "69667072"
 
 ## <a name="to-correct-this-error"></a>Per correggere l'errore
 
-- Convertire gli oggetti raccolta in modo esplicito usando una delle parole chiave di conversione del tipo. Le parole chiave [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) e [DirectCast operator](../../visual-basic/language-reference/operators/directcast-operator.md) generano un'eccezione in fase di esecuzione se la conversione non riesce. La parola chiave dell' [operatore TryCast](../../visual-basic/language-reference/operators/trycast-operator.md) [non restituisce nulla](../../visual-basic/language-reference/nothing.md) se la conversione non riesce.
+- Convertire gli oggetti raccolta in modo esplicito usando una delle parole chiave di conversione del tipo. Le parole chiave [CType Function](../language-reference/functions/ctype-function.md) e [DirectCast operator](../language-reference/operators/directcast-operator.md) generano un'eccezione in fase di esecuzione se la conversione non riesce. La parola chiave dell' [operatore TryCast](../language-reference/operators/trycast-operator.md) [non restituisce nulla](../language-reference/nothing.md) se la conversione non riesce.
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Funzione CType](../../visual-basic/language-reference/functions/ctype-function.md)
-- [Operatore DirectCast](../../visual-basic/language-reference/operators/directcast-operator.md)
-- [Operatore TryCast](../../visual-basic/language-reference/operators/trycast-operator.md)
-- [Nothing](../../visual-basic/language-reference/nothing.md)
+- [CType Function](../language-reference/functions/ctype-function.md)
+- [Operatore DirectCast](../language-reference/operators/directcast-operator.md)
+- [Operatore TryCast](../language-reference/operators/trycast-operator.md)
+- [Nothing](../language-reference/nothing.md)
 - [Raccolte (Visual Basic)](../programming-guide/concepts/collections.md)
