--- a/docs/visual-basic/misc/bc30769.md
+++ b/docs/visual-basic/misc/bc30769.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30769
 ms.assetid: bdbc976f-48c1-4b97-8c66-51d10f7078f5
-ms.openlocfilehash: 1ed7ed4eb2c94de938c16542f2c5a6bda3673db3
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f3c7c7bb00d91244c244d8eb534da16ba8152128
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646017"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412455"
 ---
 # <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-the-end-statement"></a>La versione di destinazione di .NET Compact Framework non supporta l'istruzione 'End'
 La versione di .NET Compact Framework in uso non supporta l'istruzione `End` .  
@@ -25,4 +25,4 @@ La versione di .NET Compact Framework in uso non supporta l'istruzione `End` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Fine \<parola chiave > istruzione](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [\<keyword>Istruzione End](../language-reference/statements/end-keyword-statement.md)
