--- a/docs/visual-basic/misc/bc30770.md
+++ b/docs/visual-basic/misc/bc30770.md
@@ -1,5 +1,5 @@
 ---
-title: Evento '<eventname>' evento specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe
+title: L'evento '<eventname>' specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30770
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30770
 ms.assetid: 7524fba7-2a37-4bc3-b789-87d73a166575
-ms.openlocfilehash: 25ca6bdb8fa5e9c8aa79efb4ca4a56a344698089
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c0fcf4c38acc4f6345d4b90198a082aa1f3c2e07
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61996736"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412442"
 ---
-# <a name="event-eventname-event-specified-by-the-defaultevent-attribute-is-not-a-publicly-accessible-event-for-this-class"></a>Evento '\<NomeEvento >' evento specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe
+# <a name="event-eventname-event-specified-by-the-defaultevent-attribute-is-not-a-publicly-accessible-event-for-this-class"></a>L'evento '\<eventname>' specificato dall'attributo 'DefaultEvent' non è un evento accessibile pubblicamente per questa classe
 L'attributo <xref:System.ComponentModel.DefaultEventAttribute> deve specificare il nome dell'evento accessibile pubblicamente nella classe a cui l'attributo è applicato.  
   
  **ID errore:** BC30770  
@@ -28,6 +28,6 @@ L'attributo <xref:System.ComponentModel.DefaultEventAttribute> deve specificare 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.ComponentModel.DefaultEventAttribute>
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
-- [Istruzione Class](../../visual-basic/language-reference/statements/class-statement.md)
-- [Public](../../visual-basic/language-reference/modifiers/public.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
+- [Istruzione Class](../language-reference/statements/class-statement.md)
+- [Pubblica](../language-reference/modifiers/public.md)
