--- a/docs/visual-basic/misc/bc30792.md
+++ b/docs/visual-basic/misc/bc30792.md
@@ -1,5 +1,5 @@
 ---
-title: L'operando 'TryCast' deve essere di tipo riferimento, ma '<typename>' è un tipo valore
+title: L'operando 'TryCast' deve essere un tipo di riferimento, ma '<typename>' è un tipo di valore
 ms.date: 07/20/2015
 f1_keywords:
 - BC30792
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC30792
 ms.assetid: 3325fce5-dbc0-4d1d-9530-31f4720bfe6e
-ms.openlocfilehash: 16a735738009ed12ead7ba464a4b7bfaf3f3843c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e8ae3c6768ba68aacd5a1618da397dc1e479337c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588384"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412429"
 ---
-# <a name="trycast-operand-must-be-reference-type-but-typename-is-a-value-type"></a>L'operando 'TryCast' deve essere di tipo riferimento, ma '\<nomeTipo >' è un tipo valore
+# <a name="trycast-operand-must-be-reference-type-but-typename-is-a-value-type"></a>L'operando 'TryCast' deve essere un tipo di riferimento, ma '\<typename>' è un tipo di valore
 L'operatore `TryCast` è usato con un tipo valore per almeno uno degli argomenti.  
   
- `TryCast` esegue un test per individuare una relazione di ereditarietà o implementazione tra i due argomenti. Pertanto, consente solo tipi riferimento per gli argomenti. Per altre informazioni, vedere [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md).  
+ `TryCast` esegue un test per individuare una relazione di ereditarietà o implementazione tra i due argomenti. Pertanto, consente solo tipi riferimento per gli argomenti. Per altre informazioni, vedere [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md).  
   
  **ID errore:** BC30792  
   
@@ -27,7 +27,7 @@ L'operatore `TryCast` è usato con un tipo valore per almeno uno degli argomenti
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore TryCast](../../visual-basic/language-reference/operators/trycast-operator.md)
-- [Operatore DirectCast](../../visual-basic/language-reference/operators/directcast-operator.md)
-- [Funzione CType](../../visual-basic/language-reference/functions/ctype-function.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Operatore TryCast](../language-reference/operators/trycast-operator.md)
+- [Operatore DirectCast](../language-reference/operators/directcast-operator.md)
+- [CType Function](../language-reference/functions/ctype-function.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
