--- a/docs/visual-basic/misc/bc30795.md
+++ b/docs/visual-basic/misc/bc30795.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30795
 ms.assetid: 8e4e1ad8-3bac-475f-82e8-e4f134692204
-ms.openlocfilehash: 201ccfad3bd9d5997251de6697c7b971b8f250fc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e955e93a7db5228437172a65dd63364fa2f0d881
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588301"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412390"
 ---
 # <a name="non-shared-members-in-a-structure-cannot-be-declared-new"></a>I membri non condivisi di una struttura non possono essere dichiarati come 'New'
 Una variabile non condivisa in una struttura è dichiarata con una clausola `New` .  
@@ -35,6 +35,6 @@ Una variabile non condivisa in una struttura è dichiarata con una clausola `New
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Shared](../../visual-basic/language-reference/modifiers/shared.md)
-- [Operatore New](../../visual-basic/language-reference/operators/new-operator.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
+- [Condivisa](../language-reference/modifiers/shared.md)
+- [Operatore New](../language-reference/operators/new-operator.md)
