--- a/docs/visual-basic/misc/bc30927.md
+++ b/docs/visual-basic/misc/bc30927.md
@@ -1,5 +1,5 @@
 ---
-title: "'MustOverride' non può essere specificato in '<procedurename>' perché si trova in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale"
+title: "'MustOverride' non può essere specificato in '<procedurename>' perché è in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30927
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30927
 ms.assetid: 5798dfda-3d7b-4f30-9715-40cbf52d6dc4
-ms.openlocfilehash: e8a4e221c0e08f1b9550740b36c61c6a033aec36
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7dd4dd7b507f63e956e2d163986d0821e6a5043e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622071"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414064"
 ---
-# <a name="mustoverride-cannot-be-specified-on-procedurename-because-it-is-in-a-partial-type-that-is-declared-notinheritable-in-another-partial-definition"></a>'MustOverride' non può essere specificato in '\<nomeroutine >' perché si trova in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale
+# <a name="mustoverride-cannot-be-specified-on-procedurename-because-it-is-in-a-partial-type-that-is-declared-notinheritable-in-another-partial-definition"></a>'MustOverride' non può essere specificato in '\<procedurename>' perché è in un tipo parziale dichiarato 'NotInheritable' in un'altra definizione parziale
 Una routine o una proprietà è dichiarata come `MustOverride` all'interno di una classe definita in più dichiarazioni parziali, ma una delle definizioni parziali specifica `NotInheritable` per la classe.  
   
  Quando si divide la definizione di una classe in diverse dichiarazioni parziali, il compilatore considera la classe come l'unione di tutte le sue dichiarazioni parziali. Questo riguarda non soltanto i membri, ma anche l'implementazione, l'ereditarietà e il livello di accesso.  
@@ -31,8 +31,8 @@ Una routine o una proprietà è dichiarata come `MustOverride` all'interno di un
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Partial](../../visual-basic/language-reference/modifiers/partial.md)
-- [MustOverride](../../visual-basic/language-reference/modifiers/mustoverride.md)
-- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
-- [NotInheritable](../../visual-basic/language-reference/modifiers/notinheritable.md)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Partial](../language-reference/modifiers/partial.md)
+- [MustOverride](../language-reference/modifiers/mustoverride.md)
+- [MustInherit](../language-reference/modifiers/mustinherit.md)
+- [NotInheritable](../language-reference/modifiers/notinheritable.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
