--- a/docs/visual-basic/misc/bc30937.md
+++ b/docs/visual-basic/misc/bc30937.md
@@ -1,5 +1,5 @@
 ---
-title: "Non è possibile implementare il membro ' <interfacename>. <procedurename>' corrispondente a questa firma perché l'interfaccia ' <interfacename>' contiene più membri con lo stesso nome e la stessa firma: <signaturelist>"
+title: <interfacename> <procedurename> Non è possibile implementare il membro ' .' che corrisponde a questa firma perché l'interfaccia ' <interfacename> ' contiene più membri con lo stesso nome e la stessa firma:<signaturelist>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30937
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30937
 ms.assetid: e917d85e-95e0-431a-9d09-39ce5d4fc894
-ms.openlocfilehash: c6b827ed975f442e9de46da20c8d30c18fb2c36b
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: a9609090365dbe7b18ca1589e8e1e871d9dee1f4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352654"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414025"
 ---
-# <a name="member-interfacenameprocedurename-that-matches-this-signature-cannot-be-implemented-because-the-interface-interfacename-contains-multiple-members-with-this-same-name-and-signature-signaturelist"></a>Non è possibile implementare il membro ' \<interfacename >. \<procedurename >' corrispondente a questa firma perché l'interfaccia ' \<interfacename >' contiene più membri con lo stesso nome e la stessa firma: \<signaturelist >
+# <a name="member-interfacenameprocedurename-that-matches-this-signature-cannot-be-implemented-because-the-interface-interfacename-contains-multiple-members-with-this-same-name-and-signature-signaturelist"></a>\<interfacename> \<procedurename> Non è possibile implementare il membro ' .' che corrisponde a questa firma perché l'interfaccia ' \<interfacename> ' contiene più membri con lo stesso nome e la stessa firma:\<signaturelist>
 Una routine o proprietà prova a implementare una routine o proprietà definita in un'interfaccia implementata, ma il compilatore trova più versioni della routine o della proprietà d'interfaccia con lo stesso nome e la stessa firma.  
   
  Questo errore può verificarsi in una situazione con tipi generici costruiti, come illustrano le seguenti dichiarazioni di struttura.  
@@ -46,5 +46,5 @@ End Class
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Implements](../../visual-basic/language-reference/statements/implements-clause.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Implementazioni](../language-reference/statements/implements-clause.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
