--- a/docs/visual-basic/misc/bc31053.md
+++ b/docs/visual-basic/misc/bc31053.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31053
 ms.assetid: 8036a1a1-7e31-4c49-b74b-01601a548f3e
-ms.openlocfilehash: 28aa4d2faa09b3b35fccb56bd3650a1d0a8a0d77
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 8c03a0241ea48c43e393b324f1306cd8de27f8e6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71351462"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414764"
 ---
 # <a name="implements-statement-must-follow-any-inherits-statement-and-precede-all-declarations-in-a-class"></a>Le istruzioni 'Implements' devono seguire l'istruzione 'Inherits' e precedere tutte le dichiarazioni all'interno di una classe
 È stata rilevata un'istruzione `Implements` in una posizione non valida.  
@@ -21,7 +21,7 @@ ms.locfileid: "71351462"
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Inserire le istruzioni `Implements` subito dopo le istruzioni `Inherits` , ma prima di qualsiasi dichiarazione. Esempio:  
+- Inserire le istruzioni `Implements` subito dopo le istruzioni `Inherits` , ma prima di qualsiasi dichiarazione. Ad esempio:  
   
     ```vb  
     Class Derived  
@@ -35,5 +35,5 @@ ms.locfileid: "71351462"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [Implements](../../visual-basic/language-reference/statements/implements-clause.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
+- [Implementazioni](../language-reference/statements/implements-clause.md)
