--- a/docs/visual-basic/misc/bc31530.md
+++ b/docs/visual-basic/misc/bc31530.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31530
 ms.assetid: e63f1f7d-b7df-4637-a0f4-2783479ca1af
-ms.openlocfilehash: 16d74477e87b70565bd6050b5973701fa00bdb82
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9a4ee453b5b833483cead24d66011bd7c7ebaf5a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64617045"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412117"
 ---
 # <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-interface-methods"></a>Non è possibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a metodi di interfaccia
 All'interno di un'interfaccia è stata definita una routine, ma la definizione di quest'ultima applica <xref:System.Runtime.InteropServices.DllImportAttribute>.  
@@ -30,4 +30,4 @@ All'interno di un'interfaccia è stata definita una routine, ma la definizione d
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
