--- a/docs/visual-basic/misc/bc32004.md
+++ b/docs/visual-basic/misc/bc32004.md
@@ -1,5 +1,5 @@
 ---
-title: "' <name>' è dichiarato nel progetto ' <projectname1>', a cui non fa riferimento il progetto ' <projectname2>'"
+title: "' <name> ' è dichiarato nel progetto ' <projectname1> ', a cui non fa riferimento il progetto ' <projectname2> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32004
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32004
 ms.assetid: 8a305cb5-219b-44ac-b16c-29f42af4ea1a
-ms.openlocfilehash: 66ca7b3bf3f9316367839b8482b62739c845fa3c
-ms.sourcegitcommit: 4f4a32a5c16a75724920fa9627c59985c41e173c
+ms.openlocfilehash: f55e490beb74518769884d4328c8e842de77099f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/17/2019
-ms.locfileid: "72524431"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414647"
 ---
-# <a name="name-is-declared-in-project-projectname1-which-is-not-referenced-by-project-projectname2"></a>' \<name >' è dichiarato nel progetto ' \<projectname1 >', a cui non fa riferimento il progetto ' \<projectname2 >'
+# <a name="name-is-declared-in-project-projectname1-which-is-not-referenced-by-project-projectname2"></a>' \<name> ' è dichiarato nel progetto ' \<projectname1> ', a cui non fa riferimento il progetto ' \<projectname2> '
 Un elemento di programmazione è definito in un progetto al quale il progetto corrente non fa riferimento.  
   
  **ID errore:** BC32004  
@@ -25,5 +25,5 @@ Un elemento di programmazione è definito in un progetto al quale il progetto co
   
 ## <a name="see-also"></a>Vedere anche
 
-- [-Reference (Visual Basic)](../../visual-basic/reference/command-line-compiler/reference.md)
+- [-Reference (Visual Basic)](../reference/command-line-compiler/reference.md)
 - [Gestione delle proprietà di progetti e soluzioni](/visualstudio/ide/managing-project-and-solution-properties)
