--- a/docs/visual-basic/misc/bc32015.md
+++ b/docs/visual-basic/misc/bc32015.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32015
 ms.assetid: 6e62fe8d-a875-4995-b6b2-443e75c65e85
-ms.openlocfilehash: 0dce370cfbcf70e3fabe121b907370a4fed549fd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 7e4da18baeb317a1be8ddd91afdc0f2600dd7ce9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61833391"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413908"
 ---
 # <a name="assembly-or-module-expected"></a>È previsto 'Assembly' o 'Module'
 Un attributo globale viene specificato senza indicare se si riferisce all'intero assembly o solo al modulo corrente. Gli attributi globali devono specificare `Assembly` o `Module`.  
@@ -29,5 +29,5 @@ Un attributo globale viene specificato senza indicare se si riferisce all'intero
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Assembly](../../visual-basic/language-reference/modifiers/assembly.md)
-- [Modulo \<parola chiave>](../../visual-basic/language-reference/modifiers/module-keyword.md)
+- [Assembly](../language-reference/modifiers/assembly.md)
+- [Modulo\<keyword>](../language-reference/modifiers/module-keyword.md)
