--- a/docs/visual-basic/misc/bc32093.md
+++ b/docs/visual-basic/misc/bc32093.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32093
 ms.assetid: 9a1baf12-a4a4-442d-9baa-852ad30a956b
-ms.openlocfilehash: 5fbc508322227a249d858744c9e1ef42827b6458
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0733c7cf0b451b408db261a907f37a8db1ee32f9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618593"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358543"
 ---
 # <a name="of-required-when-specifying-type-arguments-for-a-generic-type-or-method"></a>'Of' è richiesto quando si specificano argomenti tipo per un tipo o metodo generico
-Un'istruzione tenta di costruire un tipo da un tipo generico o di chiamare un metodo generico, senza usare una clausola [Of](../../visual-basic/language-reference/statements/of-clause.md) .  
+Un'istruzione tenta di costruire un tipo da un tipo generico o di chiamare un metodo generico, senza usare una clausola [Of](../language-reference/statements/of-clause.md) .  
   
- La sintassi di Visual Basic per i tipi generici richiede i parametri e argomenti di tipo siano introdotti dal `Of` (parola chiave). Inoltre, l'elenco di parametri di tipo o di argomenti di tipo deve essere racchiuso tra parentesi.  
+ La sintassi Visual Basic per i tipi generici richiede che i parametri di tipo e gli argomenti di tipo siano introdotti dalla `Of` parola chiave. Inoltre, l'elenco di parametri di tipo o di argomenti di tipo deve essere racchiuso tra parentesi.  
   
  **ID errore:** BC32093  
   
@@ -27,5 +27,5 @@ Un'istruzione tenta di costruire un tipo da un tipo generico o di chiamare un me
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Procedura: Usare una classe generica](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Procedura: Usare una classe generica](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
