--- a/docs/visual-basic/misc/bc32122.md
+++ b/docs/visual-basic/misc/bc32122.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile<interfacename1>ereditare l'interfaccia '' perché l'interfaccia '<interfacename2>' da cui eredita potrebbe essere identica<interfacename3>all'interfaccia '' da cui<interfacename4>eredita l'interfaccia '' per alcuni argomenti di tipo
+title: Non è possibile ereditare l'interfaccia '<interfacename1>' perché l'interfaccia '<interfacename2>' da cui eredita potrebbe essere identica all'interfaccia '<interfacename3>' da cui eredita l'interfaccia '<interfacename4>' per alcuni argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32122
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32122
 ms.assetid: 64a66ec7-0f5f-4804-a92b-9a6279fdfd6d
-ms.openlocfilehash: e36f5c54ec6f84c04a4fdbe323d9d9226580026a
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 0dee4c42f241b5c0d30548e4a1cb01f0a3d48b93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512920"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386146"
 ---
-# <a name="cannot-inherit-interface-interfacename1-because-the-interface-interfacename2-from-which-it-inherits-could-be-identical-to-interface-interfacename3-from-which-the-interface-interfacename4-inherits-for-some-type-arguments"></a>Non è possibile ereditare l'interfaccia\<' nomeinterfaccia1 >' perché l'interfaccia '\<nomeinterfaccia2 >' da cui eredita potrebbe essere identica\<all'interfaccia ' nomeinterfaccia3 >' da cui\< l'interfaccia ' nomeinterfaccia4 >' eredita per alcuni argomenti di tipo
+# <a name="cannot-inherit-interface-interfacename1-because-the-interface-interfacename2-from-which-it-inherits-could-be-identical-to-interface-interfacename3-from-which-the-interface-interfacename4-inherits-for-some-type-arguments"></a>Non è possibile ereditare l'interfaccia '\<interfacename1>' perché l'interfaccia '\<interfacename2>' da cui eredita potrebbe essere identica all'interfaccia '\<interfacename3>' da cui eredita l'interfaccia '\<interfacename4>' per alcuni argomenti di tipo
 
 Un'interfaccia generica eredita da due o più interfacce generiche e due delle ereditarietà potrebbero essere in conflitto per determinati valori di argomenti di tipo.
 
@@ -48,7 +48,7 @@ Se l'interfaccia `derivedInterface` è costruita o implementata specificando lo 
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [Istruzione Inherits](../../visual-basic/language-reference/statements/inherits-statement.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Inherits Statement](../language-reference/statements/inherits-statement.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
