--- a/docs/visual-basic/misc/bc32508.md
+++ b/docs/visual-basic/misc/bc32508.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32508
 ms.assetid: c8af606d-f448-4703-98df-e594fd511f92
-ms.openlocfilehash: 88c8fa7883d79655b2174be110985d6c232f94f1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f06bf0d3eb1ceffe3df084ba918e3ec8507d7f89
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591916"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385756"
 ---
 # <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-a-class-that-is-declared-mustinherit"></a>Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a una classe dichiarata 'MustInherit'
 Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma la relativa dichiarazione specifica `MustInherit`.  
@@ -38,5 +38,5 @@ Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:Microsoft.VisualBasic.ComClassAttribute>
-- [Interoperabilità COM](../../visual-basic/programming-guide/com-interop/index.md)
-- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [Interoperabilità COM](../programming-guide/com-interop/index.md)
+- [MustInherit](../language-reference/modifiers/mustinherit.md)
