--- a/docs/visual-basic/misc/bc42301.md
+++ b/docs/visual-basic/misc/bc42301.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42301
 ms.assetid: 04c4b833-2001-420d-9f49-4048a3b04ee4
-ms.openlocfilehash: df772d5d508c41fd34cd8a734371eb4e67fd5fba
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f67113b7927a83f6c97170e2b19898f5d5059f99
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588096"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413596"
 ---
 # <a name="only-one-xml-comment-block-is-allowed-per-language-element"></a>Per ogni elemento di linguaggio è consentito solo un blocco di commento XML
 Sono stati applicati più blocchi di commento XML a un elemento di linguaggio.  
@@ -25,5 +25,5 @@ Sono stati applicati più blocchi di commento XML a un elemento di linguaggio.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Creare documentazione XML](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Procedura: Creare documentazione XML](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
