--- a/docs/visual-basic/misc/bc30626.md
+++ b/docs/visual-basic/misc/bc30626.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30626
 ms.assetid: d3c74252-0e71-4621-ad83-4e2183b7b442
-ms.openlocfilehash: 64b84a19e6f18de97872570cffafdb334fd5040e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8b66a5131e148469594d1d9bf95a8a9e1f9c5f4a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646674"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415310"
 ---
 # <a name="namespace-statement-must-end-with-a-matching-end-namespace"></a>L'istruzione 'Namespace' deve terminare con un oggetto 'End Namespace' corrispondente
 I blocchi`Namespace` devono terminare con un'istruzione `End Namespace` .  
@@ -25,5 +25,5 @@ I blocchi`Namespace` devono terminare con un'istruzione `End Namespace` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [Spazi dei nomi in Visual Basic](../../visual-basic/programming-guide/program-structure/namespaces.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
+- [Spazi dei nomi in Visual Basic](../programming-guide/program-structure/namespaces.md)
