--- a/docs/visual-basic/misc/bc30631.md
+++ b/docs/visual-basic/misc/bc30631.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30631
 ms.assetid: de7ca4a2-9951-4ac1-897a-aca78e89133f
-ms.openlocfilehash: 11ef3f40123b2a51064386a40c993ff40248818c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 99e2ccc090f14a6fb227220da322a2a5208baadf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646621"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415219"
 ---
 # <a name="get-statement-must-end-with-a-matching-end-get"></a>L'istruzione 'Get' deve terminare con un oggetto 'End Get' corrispondente
 Le routine della proprietà`Get` devono terminare con un'istruzione `End Get` .  
@@ -25,4 +25,4 @@ Le routine della proprietà`Get` devono terminare con un'istruzione `End Get` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
