--- a/docs/visual-basic/misc/bc30635.md
+++ b/docs/visual-basic/misc/bc30635.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30635
 ms.assetid: 36974424-9d67-434d-a86f-635b7f59a730
-ms.openlocfilehash: b44c93ef8d30a4755d633c403879932345834fdd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 192836ec7917cd7fdcdfaa9bb3aa2a8186d43dda
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646571"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415193"
 ---
 # <a name="readonly-and-writeonly-cannot-be-combined"></a>Non è possibile combinare 'ReadOnly' e 'WriteOnly'
 I modificatori `ReadOnly` e `WriteOnly` si escludono reciprocamente.  
@@ -25,5 +25,5 @@ I modificatori `ReadOnly` e `WriteOnly` si escludono reciprocamente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [ReadOnly](../../visual-basic/language-reference/modifiers/readonly.md)
-- [WriteOnly](../../visual-basic/language-reference/modifiers/writeonly.md)
+- [ReadOnly](../language-reference/modifiers/readonly.md)
+- [WriteOnly](../language-reference/modifiers/writeonly.md)
