--- a/docs/visual-basic/misc/bc30636.md
+++ b/docs/visual-basic/misc/bc30636.md
@@ -1,5 +1,5 @@
 ---
-title: previsto ' >'
+title: Previsto ' >'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30636
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30636
 ms.assetid: 37d7115d-0fbf-4ac4-9065-b7580e116bdd
-ms.openlocfilehash: 5eb876af4053361293011f88893e7828f80202dd
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: c1315d22dcbcfc3e6d6e1347d710e39ecb3cea00
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667170"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415154"
 ---
-# <a name="-expected"></a>previsto ' >'
+# <a name="-expected"></a>Previsto ' >'
 La sintassi per il codice specificato non è corretta. Questo errore indica spesso che manca la parentesi angolare di chiusura per un attributo o valore letterale elemento XML.  
   
  **ID errore:** BC30636  
@@ -27,4 +27,4 @@ La sintassi per il codice specificato non è corretta. Questo errore indica spes
 
 - [Panoramica degli attributi](../programming-guide/concepts/attributes/index.md)
 - [Istruzioni di dichiarazione](../programming-guide/language-features/statements.md#declaration-statements)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
