--- a/docs/visual-basic/misc/bc30647.md
+++ b/docs/visual-basic/misc/bc30647.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30647
 ms.assetid: d4c05c28-d650-4f49-976e-650d84802036
-ms.openlocfilehash: d9abcd9b0b352292f11b389ed0481ae08786cfa9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 18508c0f0648f0e10ae9367a07571f4021d7c645
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646503"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415076"
 ---
 # <a name="return-statement-in-a-sub-or-a-set-cannot-return-a-value"></a>L'istruzione 'Return' in un Sub o Set non può restituire un valore
 Le routine`Sub` e le routine `Set` di proprietà non possono restituire valori.  
@@ -27,7 +27,7 @@ Le routine`Sub` e le routine `Set` di proprietà non possono restituire valori.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Return](../../visual-basic/language-reference/statements/return-statement.md)
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Return (istruzione)](../language-reference/statements/return-statement.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
