--- a/docs/visual-basic/misc/bc30706.md
+++ b/docs/visual-basic/misc/bc30706.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30706
 ms.assetid: 229bb582-d962-4385-97e7-120dcf5d8991
-ms.openlocfilehash: aa4411e09b4eda4497502247818b7503c021e7b5
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 02e35ae2c1cb29571f290b2c71ea7e599f55556c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73197978"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412598"
 ---
 # <a name="expression-or-statement-is-not-valid-in-debug-windows"></a>L'espressione o l'istruzione non è valida nelle finestre di debug
 Le istruzioni`Try...Catch...Finally` non possono essere usate nel contesto di debug.  
@@ -25,5 +25,5 @@ Le istruzioni`Try...Catch...Finally` non possono essere usate nel contesto di de
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
 - [Debug in Visual Studio](/visualstudio/debugger/debugger-feature-tour)
