--- a/docs/visual-basic/misc/bc30744.md
+++ b/docs/visual-basic/misc/bc30744.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30744
 ms.assetid: 01ee1afc-e09e-4b1e-92c1-49a697c90ba0
-ms.openlocfilehash: c754aad19a49cb5f6faddc0bd5abafe61f344e2d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 562d11504d39f0db81657402a0ecd96c22c7be38
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646120"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412611"
 ---
 # <a name="referenced-array-element-has-a-value-of-nothing"></a>L'elemento di matrice a cui si fa riferimento ha valore 'Nothing'
 L'elemento di matrice a cui si fa riferimento non è stato impostato oppure in precedenza è stato impostato su `Nothing`.  
@@ -25,4 +25,4 @@ L'elemento di matrice a cui si fa riferimento non è stato impostato oppure in p
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nothing](../../visual-basic/language-reference/nothing.md)
+- [Nothing](../language-reference/nothing.md)
