--- a/docs/visual-basic/misc/bc30763.md
+++ b/docs/visual-basic/misc/bc30763.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30763
 ms.assetid: 55f6d297-7ca3-48b4-9d88-88982390faf6
-ms.openlocfilehash: 335118ce428b25f1692f8594035ed305c5a31a50
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5205bac988f02aea492df6f1b7516a6111ea007d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64656988"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412507"
 ---
 # <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-using-the-ansi-auto-or-unicode-modifier"></a>La versione di destinazione di .NET Compact Framework non supporta l'utilizzo del modificatore ANSI, Auto o Unicode
 La versione di .NET Compact Framework in uso non supporta i modificatori `Ansi`, `Auto`e `Unicode` .  
@@ -25,6 +25,6 @@ La versione di .NET Compact Framework in uso non supporta i modificatori `Ansi`,
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Ansi](../../visual-basic/language-reference/modifiers/ansi.md)
-- [Auto](../../visual-basic/language-reference/modifiers/auto.md)
-- [Unicode](../../visual-basic/language-reference/modifiers/unicode.md)
+- [Ansi](../language-reference/modifiers/ansi.md)
+- [Auto](../language-reference/modifiers/auto.md)
+- [Unicode](../language-reference/modifiers/unicode.md)
