--- a/docs/visual-basic/misc/bc30767.md
+++ b/docs/visual-basic/misc/bc30767.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30767
 ms.assetid: 6aa62dcc-99aa-4051-a81e-3bbb6a8c355f
-ms.openlocfilehash: 8f573a46ddde81299ac19f0c36de0cc0d149cb36
-ms.sourcegitcommit: 17ee6605e01ef32506f8fdc686954244ba6911de
+ms.openlocfilehash: 904a4062ffde5aa0577b1bb02af86624bd257d52
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/22/2019
-ms.locfileid: "74346657"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412468"
 ---
 # <a name="get-statements-are-no-longer-supported-visual-basic"></a>Le istruzioni 'Get' non sono più supportate (Visual Basic)
 Le istruzioni`Get` non sono più supportate. La funzionalità di I/O dei file è in genere disponibile nello spazio dei nomi `Microsoft.VisualBasic` , ma non è supportata dalla versione di destinazione di .NET Compact Framework.  
@@ -26,5 +26,5 @@ Le istruzioni`Get` non sono più supportate. La funzionalità di I/O dei file è
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.IO>
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
-- [Accesso ai file con Visual Basic](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
+- [Accesso ai file con Visual Basic](../developing-apps/programming/drives-directories-files/file-access.md)
