--- a/docs/visual-basic/misc/bc30768.md
+++ b/docs/visual-basic/misc/bc30768.md
@@ -1,5 +1,5 @@
 ---
-title: Le istruzioni 'Line' non sono più supportate (Smart Device-errore Visual Basic del compilatore)
+title: Le istruzioni ' line ' non sono più supportate (errore del compilatore Visual Basic Smart Device)
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30768
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30768
 ms.assetid: e7a17c77-06bb-4d33-966e-addb4f51caaf
-ms.openlocfilehash: 7f6cd2f7bc35cf0a30a05ea7ef93bff92072e0d2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f24ad5fc3a88fb7d598e2479b7227c74911b65db
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657041"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412481"
 ---
 # <a name="line-statements-are-no-longer-supported-smart-devicevisual-basic-compiler-error"></a>Le istruzioni 'Line' non sono più supportate (errore del compilatore Visual Basic/Smart Device)
 L'istruzione `Line` non è più supportata. La funzionalità di I/O dei file è in genere disponibile come <xref:Microsoft.VisualBasic.FileSystem.LineInput%2A?displayProperty=nameWithType>, ma non è supportata dalla versione di destinazione di .NET Compact Framework.  
@@ -29,4 +29,4 @@ L'istruzione `Line` non è più supportata. La funzionalità di I/O dei file è 
 
 - <xref:System.IO>
 - <xref:System.Drawing>
-- [Accesso ai file con Visual Basic](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
+- [Accesso ai file con Visual Basic](../developing-apps/programming/drives-directories-files/file-access.md)
