--- a/docs/visual-basic/misc/bc30798.md
+++ b/docs/visual-basic/misc/bc30798.md
@@ -1,5 +1,5 @@
 ---
-title: «<elementname>'per l'alias di Imports per'<qualifiedelementname>' non fa riferimento a un Namespace, classe, struttura, interfaccia, enumerazione o modulo
+title: "' <elementname> ' per l'alias Imports in ' <qualifiedelementname> ' non fa riferimento a uno spazio dei nomi, una classe, una struttura, un'interfaccia, un'enumerazione o un modulo"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30798
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30798
 ms.assetid: bfa66627-516a-4955-977d-92372bcea090
-ms.openlocfilehash: 3e4e03f2d44408359ce2fda4d28819a8244b3628
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 73d7900fba73cf5286354e043241200222b88a4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770149"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412351"
 ---
-# <a name="elementname-for-the-imports-alias-to-qualifiedelementname-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a>«\<NomeElemento >' per l'alias di Imports per '\<nomeelementoqualificato >' non fa riferimento a un Namespace, classe, struttura, interfaccia, enumerazione o modulo
-Un' [istruzione Imports (tipo e .NET Namespace)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un elemento di programmazione che non può essere importato.  
+# <a name="elementname-for-the-imports-alias-to-qualifiedelementname-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a>' \<elementname> ' per l'alias Imports in ' \<qualifiedelementname> ' non fa riferimento a uno spazio dei nomi, una classe, una struttura, un'interfaccia, un'enumerazione o un modulo
+Un' [istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un elemento di programmazione che non può essere importato.  
   
  L'istruzione `Imports` si usa per ridurre o rimuovere la necessità di una stringa di qualifica davanti al nome di un elemento. Qualificare l'elemento nell'istruzione `Imports` stessa per offrire un percorso non ambiguo di una dichiarazione univoca dell'elemento. In seguito non sarà necessario qualificare i riferimenti all'elemento.  
   
  `Imports` viene più comunemente usato per gli spazi dei nomi, ma è anche possibile importare una classe, modulo, struttura, interfaccia o enumerazione per fare riferimento ai suoi elementi senza usare una lunga stringa di qualifica.  
   
- Per altre informazioni, vedere "Importazione di elementi contenitore" in.  
+ Per ulteriori informazioni, vedere "importazione di elementi contenitore" in.  
   
  **ID errore:** BC30798  
   
@@ -33,4 +33,4 @@ Un' [istruzione Imports (tipo e .NET Namespace)](../../visual-basic/language-ref
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Riferimenti e istruzione Imports](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+- [Riferimenti e istruzione Imports](../programming-guide/program-structure/references-and-the-imports-statement.md)
