--- a/docs/visual-basic/misc/bc30807.md
+++ b/docs/visual-basic/misc/bc30807.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30807
 ms.assetid: 41345efa-0d9f-4dfa-b16c-0f649efe8e24
-ms.openlocfilehash: 67c9efac31d99c95d2e0a279cf795d36d4869f89
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9763f0aa5e48c49b8b1114dae388f7dd72a15834
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633152"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412286"
 ---
 # <a name="let-and-set-assignment-statements-are-no-longer-supported"></a>Le istruzioni di assegnazione 'Let' e 'Set' non sono più supportate
 `Let` e `Set` non possono essere usati nelle assegnazioni.  
@@ -27,4 +27,4 @@ ms.locfileid: "64633152"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
