--- a/docs/visual-basic/misc/bc30810.md
+++ b/docs/visual-basic/misc/bc30810.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30810
 ms.assetid: 3c412d58-1007-4278-b365-a85dc55ebe48
-ms.openlocfilehash: b623bdaad4b291b6d5736f037da4ae5f1d599e2e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 03da3a036fbd3c10beb122a34ab15c80e76f979b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632536"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412260"
 ---
 # <a name="methods-cannot-be-declared-static"></a>I metodi non possono essere dichiarati come 'Static'
 Il modificatore `Static` non può essere applicato a intere routine.  
@@ -25,4 +25,4 @@ Il modificatore `Static` non può essere applicato a intere routine.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Static](../../visual-basic/language-reference/modifiers/static.md)
+- [Statico](../language-reference/modifiers/static.md)
