--- a/docs/visual-basic/misc/bc31133.md
+++ b/docs/visual-basic/misc/bc31133.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31133
 ms.assetid: f6295626-dd63-408c-ab5f-76367f94d6ca
-ms.openlocfilehash: 7d47aea277220a64bd948eff898b9d23ef2bbe53
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: b2807626f799a1c8499f245a3dddc96cb5e9eeaa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664597"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414738"
 ---
 # <a name="addhandler-and-removehandler-methods-must-have-exactly-one-parameter"></a>I metodi 'AddHandler' e 'RemoveHandler' devono avere esattamente un parametro
 Una dichiarazione di evento personalizzato deve avere dichiarazioni `AddHandler` o `RemoveHandler` , ognuna delle quali accetta un solo parametro del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.  
@@ -30,7 +30,7 @@ Una dichiarazione di evento personalizzato deve avere dichiarazioni `AddHandler`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Events](../programming-guide/language-features/events/index.md)
