--- a/docs/visual-basic/misc/bc31510.md
+++ b/docs/visual-basic/misc/bc31510.md
@@ -1,5 +1,5 @@
 ---
-title: La costante di<constantname>attributo '' non può essere la destinazione di un'assegnazione
+title: La costante di attributo '<constantname>' non può essere la destinazione di un'assegnazione
 ms.date: 07/20/2015
 f1_keywords:
 - bc31510
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31510
 ms.assetid: 5459c531-3a4e-4e03-b185-9c5766254982
-ms.openlocfilehash: 26526919a969530e853e103c53ad46f86df0a8cb
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: ef29c529037a05ad1ea54ab7a44adca925516a6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660945"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412221"
 ---
-# <a name="attribute-constant-constantname-cannot-be-the-target-of-an-assignment"></a>La costante di\<attributo ' constantname >' non può essere la destinazione di un'assegnazione
+# <a name="attribute-constant-constantname-cannot-be-the-target-of-an-assignment"></a>La costante di attributo '\<constantname>' non può essere la destinazione di un'assegnazione
 Si è provato ad assegnare un valore a una costante dichiarata in un attributo.  
   
  **ID errore:** BC31510  
@@ -28,4 +28,4 @@ Si è provato ad assegnare un valore a una costante dichiarata in un attributo.
 ## <a name="see-also"></a>Vedere anche
 
 - [Panoramica degli attributi](../programming-guide/concepts/attributes/index.md)
-- [Costanti ed enumerazioni](../../visual-basic/language-reference/constants-and-enumerations.md)
+- [Costanti ed enumerazioni](../language-reference/constants-and-enumerations.md)
