--- a/docs/visual-basic/misc/bc31522.md
+++ b/docs/visual-basic/misc/bc31522.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31522
 ms.assetid: 9548cf98-8a13-4f09-b6b5-2f57273c1571
-ms.openlocfilehash: ee1c55eff8261f97a93d79e54b85702a40e93826
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 227c9ee42e07cc0623c929e35f840d097be499d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64661265"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412195"
 ---
 # <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-sub-function-or-operator-with-a-non-empty-body"></a>Non è possibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a Sub, Function o Operator con un corpo non vuoto
 L'attributo `DllImportAttribute` è stato applicato a `Sub`, `Function`o `Operator` con un corpo non vuoto.  
@@ -26,4 +26,4 @@ L'attributo `DllImportAttribute` è stato applicato a `Sub`, `Function`o `Operat
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [Istruzione Declare](../../visual-basic/language-reference/statements/declare-statement.md)
+- [Declare Statement](../language-reference/statements/declare-statement.md)
