--- a/docs/visual-basic/misc/bc31527.md
+++ b/docs/visual-basic/misc/bc31527.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31527
 ms.assetid: ea125bff-d020-4933-b277-6e24943eea88
-ms.openlocfilehash: b1d46ed20e917959ff6e76a67315deb480a66a11
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ebab65a9b3d84cdfc7e01b3ea5d911a26aecd2ce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64605316"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412156"
 ---
 # <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-a-class-that-is-generic-or-nested-inside-a-generic-type"></a>Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a una classe generica o contenuta all'interno di un tipo generico
 Viene dichiarata una classe con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma è generica o contenuta all'interno di un tipo generico.  
@@ -38,5 +38,5 @@ Viene dichiarata una classe con <xref:Microsoft.VisualBasic.ComClassAttribute>, 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:Microsoft.VisualBasic.ComClassAttribute>
-- [Interoperabilità COM](../../visual-basic/programming-guide/com-interop/index.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Interoperabilità COM](../programming-guide/com-interop/index.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
