--- a/docs/visual-basic/misc/bc31529.md
+++ b/docs/visual-basic/misc/bc31529.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31529
 ms.assetid: c8bde5d7-c6bf-4d21-bb1a-e8627d65ad29
-ms.openlocfilehash: 7d9d232f7fac757823eac49a5fd36e02d89b894c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d6f47b1260dc3318ebebb0e87e57e64d27885f35
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64605333"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412130"
 ---
 # <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-instance-methods"></a>Impossibile applicare 'System.Runtime.InteropServices.DllImportAttribute' a metodi di istanza
 Una routine non condivisa viene dichiarata con l'attributo <xref:System.Runtime.InteropServices.DllImportAttribute>.  
@@ -32,4 +32,4 @@ Una routine non condivisa viene dichiarata con l'attributo <xref:System.Runtime.
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [Shared](../../visual-basic/language-reference/modifiers/shared.md)
+- [Condivisa](../language-reference/modifiers/shared.md)
