--- a/docs/visual-basic/misc/bc31531.md
+++ b/docs/visual-basic/misc/bc31531.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31531
 ms.assetid: 0ea3a16c-cfe0-4cb5-b740-358679272f8d
-ms.openlocfilehash: f7893e1e32de8b7389125884650002e0bc2c5bc3
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 750b0837f286d070a735744a4dd4312cad93f3a2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660870"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412104"
 ---
 # <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-addhandler-removehandler-or-raiseevent-methods"></a>'System.Runtime.InteropServices.DllImportAttribute' non può essere applicato ai metodi 'AddHandler', 'RemoveHandler' o 'RaiseEvent'
 L'attributo `DllImportAttribute` è stato applicato a una dichiarazione di metodo `AddHandler`, `RemoveHandler`o `RaiseEvent` . Questo attributo può essere usato solo con un oggetto `Function` o `Sub`vuoto.  
@@ -26,7 +26,7 @@ L'attributo `DllImportAttribute` è stato applicato a una dichiarazione di metod
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Runtime.InteropServices.DllImportAttribute>
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
 - [RaiseEvent-istruzione](../language-reference/statements/raiseevent-statement.md)
