--- a/docs/visual-basic/misc/bc32000.md
+++ b/docs/visual-basic/misc/bc32000.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile locale '<variablename>' Impossibile fare riferimento alla prima che sia dichiarata
+title: Impossibile fare riferimento alla variabile locale '<variablename>' prima che sia dichiarata
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32000
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32000
 ms.assetid: 81e2bbe3-8b8a-4bf7-b344-08489d50ef6e
-ms.openlocfilehash: 400d31634ad92eff3dd2578c129e762f233cfc99
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 50e6046acfa1871e95759e8ce199644c44b8676c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651282"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412070"
 ---
-# <a name="local-variable-variablename-cannot-be-referred-to-before-it-is-declared"></a>Variabile locale '\<nomevariabile >' non può fare riferimento alla prima che sia dichiarata
+# <a name="local-variable-variablename-cannot-be-referred-to-before-it-is-declared"></a>Impossibile fare riferimento alla variabile locale '\<variablename>' prima che sia dichiarata
 Una variabile all'interno di una routine viene usata prima di essere dichiarata.  
   
  **ID errore:** BC32000  
@@ -25,4 +25,4 @@ Una variabile all'interno di una routine viene usata prima di essere dichiarata.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Dichiarazione di variabile](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [Dichiarazione di variabile](../programming-guide/language-features/variables/variable-declaration.md)
