--- a/docs/visual-basic/misc/bc32020.md
+++ b/docs/visual-basic/misc/bc32020.md
@@ -1,5 +1,5 @@
 ---
-title: previsto ' =' (Let o set Assignment)
+title: Previsto '=' (assegnazione Let o Set)
 ms.date: 07/20/2015
 f1_keywords:
 - bc32020
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32020
 ms.assetid: 1b12f082-e502-4524-9326-b9b372670243
-ms.openlocfilehash: 94d4c241dddb44b4296ac8245993f96f049dc567
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 53659b21a23b9c0a29bd80e0add9143d879d2b8b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667603"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412039"
 ---
-# <a name="-expected-let-or-set-assignment"></a>previsto ' =' (Let o set Assignment)
-Un' `Let` istruzione `Set` di assegnazione o non include un segno di uguale`=`().  
+# <a name="-expected-let-or-set-assignment"></a>Previsto '=' (assegnazione Let o Set)
+Un' `Let` istruzione di assegnazione o non `Set` include un segno di uguale ( `=` ).  
   
- Le `Let` istruzioni `Set` di assegnazione e non sono supportate nella versione corrente di Visual Basic. Il compilatore è in grado di determinare il tipo di assegnazione dal tipo di dati dell'elemento di programmazione che deve ricevere il valore. Un'assegnazione del *tipo* di valore `Let` sostituisce l'istruzione e un'assegnazione del *tipo* di riferimento `Set` sostituisce l'istruzione precedente.  
+ Le `Let` `Set` istruzioni di assegnazione e non sono supportate nella versione corrente di Visual Basic. Il compilatore è in grado di determinare il tipo di assegnazione dal tipo di dati dell'elemento di programmazione che deve ricevere il valore. Un'assegnazione del *tipo di valore* sostituisce l' `Let` istruzione e un'assegnazione del *tipo di riferimento* sostituisce l' `Set` istruzione precedente.  
   
- L' [istruzione set](../../visual-basic/language-reference/statements/set-statement.md) viene utilizzata nelle definizioni di proprietà e non ha alcuna relazione `Set` con l'istruzione di assegnazione.  
+ L' [istruzione set](../language-reference/statements/set-statement.md) viene utilizzata nelle definizioni di proprietà e non ha alcuna relazione con l' `Set` istruzione di assegnazione.  
   
  **ID errore:** BC32020  
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Utilizzare un'istruzione di assegnazione standard, includendo un segno`=`di uguale () e un valore da assegnare alla variabile o alla proprietà.  
+- Utilizzare un'istruzione di assegnazione standard, includendo un segno di uguale ( `=` ) e un valore da assegnare alla variabile o alla proprietà.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
 - [Operatori di assegnazione (Visual Basic)](../language-reference/operators/assignment-operators.md)
