--- a/docs/visual-basic/misc/bc32092.md
+++ b/docs/visual-basic/misc/bc32092.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32092
 ms.assetid: b3041c1d-837c-4d58-bbb4-5c46f227b66d
-ms.openlocfilehash: 41ba53761664f83480302003b28b3ca6d952e9fd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: fbfca339d042414d6de689e968516167ebca1860
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61783721"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358620"
 ---
 # <a name="type-or-new-expected"></a>È previsto il tipo o 'New'
 Un parametro di tipo nella dichiarazione di un tipo generico consente di introdurre un elenco di vincoli con la parola chiave `As` ma non specifica un vincolo valido.  
@@ -31,8 +31,8 @@ Un parametro di tipo nella dichiarazione di un tipo generico consente di introdu
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)
-- [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Operatore New](../../visual-basic/language-reference/operators/new-operator.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Class (Visual Basic)](../language-reference/statements/class-statement.md)
+- [Structure (Visual Basic)](../language-reference/statements/structure-statement.md)
+- [Operatore New](../language-reference/operators/new-operator.md)
+- [Type List](../language-reference/statements/type-list.md)
