--- a/docs/visual-basic/misc/bc32094.md
+++ b/docs/visual-basic/misc/bc32094.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32094
 ms.assetid: 8f8c6172-5131-4d71-9b1c-39d84d37eeb2
-ms.openlocfilehash: 1aecdff7cba4aaadc2633513fbd11c8283ce5df4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 555707c2837f517f5e1c4d79af4a888582f674a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618566"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358503"
 ---
 # <a name="comma-or--expected-type-argument-list"></a>È prevista la virgola o il segno ')' (elenco degli argomenti tipo)
 Un elenco degli argomenti di tipo contiene un elemento imprevisto. Usare le virgole (`,`) per separare gli argomenti di tipo in un elenco di questo tipo e usare una parentesi di chiusura (`)`) per concludere l'elenco.  
@@ -25,5 +25,5 @@ Un elenco degli argomenti di tipo contiene un elemento imprevisto. Usare le virg
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
