--- a/docs/visual-basic/misc/bc32119.md
+++ b/docs/visual-basic/misc/bc32119.md
@@ -1,5 +1,5 @@
 ---
-title: Vincolo '<constraint1>'è in conflitto con il vincolo'<constraint2>'già specificato per il parametro di tipo'<typeparametername>'
+title: Il vincolo ' <constraint1> ' è in conflitto con il vincolo ' <constraint2> ' già specificato per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32119
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32119
 ms.assetid: 30e6778d-5c2b-4f2d-a136-4e66fa9fbe4d
-ms.openlocfilehash: 60c2bc30c610ac02ad193c663ec4809bfaca9178
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 709b0fa192b78e1168637111b0ef115c139b056e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640139"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386237"
 ---
-# <a name="constraint-constraint1-conflicts-with-the-constraint-constraint2-already-specified-for-type-parameter-typeparametername"></a>Vincolo '\<constraint1 >' è in conflitto con il vincolo '\<constraint2 >' già specificato per il parametro di tipo '\<nomeparametrotipo >'
+# <a name="constraint-constraint1-conflicts-with-the-constraint-constraint2-already-specified-for-type-parameter-typeparametername"></a>Il vincolo ' \<constraint1> ' è in conflitto con il vincolo ' \<constraint2> ' già specificato per il parametro di tipo ' \<typeparametername> '
 Un tipo generico è dichiarato con vincoli in conflitto in un parametro di tipo.  
   
  L'istruzione seguente può generare questo errore.  
@@ -31,8 +31,8 @@ Un tipo generico è dichiarato con vincoli in conflitto in un parametro di tipo.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Structure (Visual Basic)](../language-reference/statements/structure-statement.md)
+- [Class (Visual Basic)](../language-reference/statements/class-statement.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
