--- a/docs/visual-basic/misc/bc32205.md
+++ b/docs/visual-basic/misc/bc32205.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32205
 ms.assetid: 979ae0df-b4d1-417e-8f0c-7e11c6844135
-ms.openlocfilehash: 60b0389aee3ba2dbfc20af6fe1527d05318aee24
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 629ffef78f964ba470a7ebf103c7c1b8668872d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64616933"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386094"
 ---
 # <a name="withevents-variable-name-length-cannot-exceed-1019-characters"></a>La lunghezza del nome della variabile WithEvents non può superare i 1019 caratteri
 Il nome o l'identificatore di tutte le variabili dichiarate con `WithEvents` è limitato a 1019 caratteri.  
@@ -25,5 +25,5 @@ Il nome o l'identificatore di tutte le variabili dichiarate con `WithEvents` è 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [WithEvents](../../visual-basic/language-reference/modifiers/withevents.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [WithEvents](../language-reference/modifiers/withevents.md)
