--- a/docs/visual-basic/misc/bc32504.md
+++ b/docs/visual-basic/misc/bc32504.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile applicare 'ComClassAttribute' a '<classname1>' perché il relativo contenitore '<classname2>' non è dichiarato 'Public'
+title: Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '<classname1>' perché il relativo contenitore '<classname2>' non è dichiarato 'come Public'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32504
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32504
 ms.assetid: 4138b639-88d6-4b51-afcd-c92a1be36f1c
-ms.openlocfilehash: 276ed8522c9395a81c00f5570264baff76cca229
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 771bdee1313dde55a18733ffaea9d0f1f8b88a47
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591872"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385901"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname1-because-its-container-classname2-is-not-declared-public"></a>Impossibile applicare 'ComClassAttribute' a '\<classname1 >' perché il relativo contenitore '\<classname2 >' non è dichiarato 'Public'
+# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname1-because-its-container-classname2-is-not-declared-public"></a>Non è possibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '\<classname1>' perché il relativo contenitore '\<classname2>' non è dichiarato 'come Public'
 Una classe che usa un blocco di attributi `COMClassAttribute` è dichiarata all'interno di una classe che non è `Public`. Se una classe deve essere esposta come oggetto COM, tutta la sua gerarchia di contenimento deve essere dichiarata con accesso `Public` .  
   
  **ID errore:** BC32504  
@@ -26,4 +26,4 @@ Una classe che usa un blocco di attributi `COMClassAttribute` è dichiarata all'
 ## <a name="see-also"></a>Vedere anche
 
 - [Classe ComClassAttribute](xref:Microsoft.VisualBasic.ComClassAttribute)
-- [Public](../../visual-basic/language-reference/modifiers/public.md)
+- [Pubblica](../language-reference/modifiers/public.md)
