--- a/docs/visual-basic/misc/bc42308.md
+++ b/docs/visual-basic/misc/bc42308.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42308
 ms.assetid: ff619982-84ef-44c4-8be0-b65e43099af1
-ms.openlocfilehash: 3b148ed751e164480ae3ae360166e51b6947f61b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d6f085e14a854b63344a8f4494dab80822ab29f9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663099"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413492"
 ---
 # <a name="xml-comment-parameter-must-have-a-name-attribute"></a>Il parametro di commento XML deve avere un attributo 'name'
 Il parametro di commento XML deve avere un attributo 'name'. Il commento XML verrà ignorato.  
@@ -27,5 +27,5 @@ Il parametro di commento XML deve avere un attributo 'name'. Il commento XML ver
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
